<resources>
    <string name="app_name">Stan-Droid</string>
    <string name="login">Login</string>
    <string name="mail">MailAddress</string>
    <string name="pass">Password</string>
    <string name="error">There was a problem.</string>
    <string name="connection">Connection</string>
    <string name="successful">Successful</string>
    <string name="mail_pass_error">Please set your email address and password.</string>
    <string name="loading">Loading</string>
    <string name="gift_history">Gift History</string>
    <string name="gift_ranking">Gift Ranking</string>
    <string name="nico_ad_ranking">Contribution ranking</string>
    <string name="nico_ad_history">Ad history</string>
    <string name="arena">Arena</string>
    <string name="comment_post">Post a comment</string>
    <string name="post">Post</string>
    <string name="setting">Settings</string>
    <string name="setting_watch_view_description">Play live broadcast</string>
    <string name="setting_watch_view_title">Watch live broadcast</string>
    <string name="play_live_broadcast">Play live broadcast</string>
    <string name="open_browser">Open in browser</string>
    <string name="regix_error">The ID could not be found.</string>
    <string name="follow_program">Followed programs</string>
    <string name="comment_post_success">You have successfully posted a comment.</string>
    <string name="comment_post_error">Failed to post a comment.</string>
    <string name="iyayo_comment">Post with 184 (anonymous).</string>
    <string name="comment_viewer_mode">CommentViewer Mode</string>
    <string name="comment_post_mode">Comment posting mode</string>
    <string name="nicocas_comment_post_mode">Nicocas expression comment posting mode</string>
    <string name="watch_count">watchCount</string>
    <string name="comment_count">CommentCount</string>
    <string name="comment">Comment</string>
    <string name="room_comment">View by room</string>
    <string name="gift">Gift</string>
    <string name="nicoads">niconi ads</string>
    <string name="program_info">Program Info</string>
    <string name="broadcaster">Broadcaster</string>
    <string name="community_name">Community</string>
    <string name="community_level">Community Level</string>
    <string name="nicorepo">Nicorepo</string>
    <string name="link">Link</string>
    <string name="kono_app">About this app</string>
    <string name="licence">Licence</string>
    <string name="kono_app_contact_description">If you have anything, please go here. The browser will start.</string>
    <string name="version">Version</string>
    <string name="sonta">Other</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Do you want to delete it?</string>
    <string name="sourcecode">source code</string>
    <string name="add_kotehan">I registered for KOTEHAN.</string>
    <string name="kotehan">KOTEHAN</string>
    <string name="add_kotehan_button">Kotehan added</string>
    <string name="add_ng_comment_message">Added to NG comments.</string>
    <string name="add_ng_user_message">Added to NG users.</string>
    <string name="long_click">Long press to register</string>
    <string name="ng_user">NG user</string>
    <string name="ng_comment">NG comment</string>
    <string name="delete_successful">It has been deleted</string>
    <string name="ng_list">NG list</string>
    <string name="popup_player">Pop-up playback</string>
    <string name="background_play">Background playback</string>
    <string name="popup_notification_title">Program Pop-up Playback</string>
    <string name="finish">finish</string>
    <string name="leave_app">When away from the app</string>
    <string name="leave_background_description">Play background when you leave the app.</string>
    <string name="leave_popup_description">Pop-up playback when leaving the app.</string>
    <string name="person">person</string>
    <string name="add_comment_ng">Add comment NG</string>
    <string name="add_user_ng">Add user NG</string>
    <string name="comment_copy">Copy comment</string>
    <string name="copy_successful">Copied comment.</string>
    <string name="open_url">Open URL</string>
    <string name="one_minute">1 minute</string>
    <string name="active">Number of active people (number of comments per minute)</string>
    <string name="livetime">elapsed time</string>
    <string name="comment_hidden">Hide comments</string>
    <string name="room_color_title">Color the room</string>
    <string name="room_color_description">Follow the NCV and color the arena and standing characters. (Supports up to 10). \nIn the ID non-display mode, color the comment.</string>
    <string name="add">Add</string>
    <string name="enquate">questionnaire</string>
    <string name="enquate_result">Questionnaire results</string>
    <string name="share">Share</string>
    <string name="osusume">Recommended programs for you</string>
    <string name="ranking">Ranking</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="program_disconnect">This program has ended.</string>
    <string name="end">End</string>
    <string name="back_dialog">Do you want to exit?</string>
    <string name="back_dialog_description">Otsutsu</string>
    <string name="landscape_portrait">Forcibly change vertical / horizontal screen</string>
    <string name="copy_program_id">Copy program ID</string>
    <string name="hide_info_perm">Hide info comments and management comments</string>
    <string name="bitmap_error">Conversion failed</string>
    <string name="share_attach_image">Share with image attachment</string>
    <string name="setting_hidden_id">Hide ID</string>
    <string name="setting_one_line">Display in one line</string>
    <string name="comment_viewer_setting">Setting the comment viewer</string>
    <string name="volume">volume</string>
    <string name="volume_control">Volume control</string>
    <string name="quality">Change image quality</string>
    <string name="quality_auto">Automatic</string>
    <string name="quality_audio">Audio only</string>
    <string name="successful_quality">The image quality has changed.</string>
    <string name="program_end">The program is over.</string>
    <string name="setting_mobiledata_quality">Minimum quality for mobile data</string>
    <string name="setting_mobiledata_quality_description">When using mobile data, it automatically switches to the lowest image quality.</string>
    <string name="liveid_or_communityid">Program ID, community ID, or video ID</string>
    <string name="floating_comment_viewer">Floating comment viewer</string>
    <string name="floating_comment_viewer_description">You can use the comment viewer while starting other apps.</string>
    <string name="floating_comment_viewer_version">To use this function, Android version must be 10 or later.</string>
    <string name="menu">Menu</string>
    <string name="copy_communityid">Copy community ID</string>
    <string name="setting_rotation_sensor_title">Forced screen rotation using sensor</string>
    <string name="setting_rotation_sensor_description">The screen is rotated using the sensor even when the screen rotation is disabled.</string>
    <string name="nimado">2-window comment view</string>
    <string name="setting_comment_speed_title">Movement size of comment</string>
    <string name="setting_comment_speed_description">The default is 5</string>
    <string name="entyou_message">I confirmed the extension.</string>
    <string name="end_time">End time</string>
    <string name="iyayo_hidden">Hide 184 (anonymous) comments</string>
    <string name="history">History</string>
    <string name="post_video">Posted videos</string>
    <string name="play_count">Views</string>
    <string name="mylist">Mylist</string>
    <string name="post_date">Post date</string>
    <string name="nicovideo_info">Video information</string>
    <string name="dictionary">Dictionary</string>
    <string name="low_latency">Low latency mode</string>
    <string name="nicovideo_setting_hide_device_3ds">Hide 3DS comments</string>
    <string name="nicovideo_setting_hide_device_switch">Hide Switch comments</string>
    <string name="get_comment_count">Number of comments acquired</string>
    <string name="series">series</string>
    <string name="error_player">There was a problem playing the live broadcast. Prepare for playback again.</string>
    <string name="end_time_tooltip">Frame remaining time</string>
    <string name="setting_zettaihyouzi_title">How to display comment posting time</string>
    <string name="setting_zettaihyouzi_desciption">Change the display from absolute time (example: 07:14:22) to relative time (example: 25:25)</string>
    <string name="setting_show_ng_score">Show NG score</string>
    <string name="setting_enter_post_title">Post a comment with the enter key (line feed)</string>
    <string name="nico_history">History</string>
    <string name="cast">Cast</string>
    <string name="re_login_successful">Logged in again because user session expired.</string>
    <string name="setting_select_font">Choose a font</string>
    <string name="setting_reset_font">Delete selected font</string>
    <string name="setting_font_file_description">If you want to use a font file that cannot be selected in font selection, please go to the following location. \n /sdcard/Android/data/com.kusamaru.standroid/font</string>
    <string name="nico_nama_game">Nico live game</string>
    <string name="play_nico_nama_game">Play Nico live game (experimental)</string>
    <string name="nico_nama_game_engineers">For engineers: In order to use the Nico Live game, it is realized by displaying the PC version of Nico Live on WebView.</string>
    <string name="nico_nama_game_description">Make sure you ’re not watching on another device when activating. Also, do not open programs on other terminals. (Disconnected)</string>
    <string name="setting_font_size_comment_input">Edit font size (comment)</string>
    <string name="setting_font_size_id_input">Edit font size (user ID)</string>
    <string name="setting_font_size_reset">Reset font size</string>
    <string name="font_setting">Font settings</string>
    <string name="setting_font_description">You can use the font size and font file of the comment viewer.</string>
    <string name="tag_edit">Edit tags</string>
    <string name="community_follow">Follow the community</string>
    <string name="user_follow">User follow</string>
    <string name="tag">Tag</string>
    <string name="program_start">Show start</string>
    <string name="end_of_program">End of program</string>
    <string name="upcoming_programs">Upcoming programs</string>
    <string name="popular_reservation_program">Popular reservation programs</string>
    <string name="serch">Serch</string>
    <string name="cache">Cache</string>
    <string name="get_cache">Get cache</string>
    <string name="add_mylist">My list registration</string>
    <string name="get_cache_re_get">Reacquire video information and comments</string>
    <string name="nicovideo">Video</string>
    <string name="nicolive">Live</string>
    <string name="play_video">Play video</string>
    <string name="video_id_copy">Copy video ID</string>
    <string name="get_cache_eco">Cash acquisition (economy mode)</string>
    <string name="brower_launch">Open in browser (other application)</string>
    <string name="skip_setting">Change skip seconds</string>
    <string name="rookie">rookie</string>
    <string name="kotehan_list">Fixed handle name list</string>
    <string name="add_atodemiru">See later (for now, add to my list)</string>
    <string name="nicovideo_setting_hide_kantan_comment">Hide kantan comments</string>
    <string name="nicolive_jk">Nico live version Nico Nico live (jk)</string>
    <string name="mypage">My page</string>
    <string name="nicolive_menu_konomi_tag">Search for programs by konomi tags</string>
    <string name="playback_speed">Playback Speed</string>
</resources>