<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:orientation="vertical">

                    <Button
                            android:id="@+id/fragment_nicovideo_menu_video_play_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/play_video" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                        <Button
                                android:id="@+id/fragment_nicovideo_menu_popup_button"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:text="@string/popup_player"
                                app:icon="@drawable/ic_popup_icon" />

                        <Button
                                android:id="@+id/fragment_nicovideo_menu_background_button"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:text="@string/background_play"
                                app:icon="@drawable/ic_background_icon" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_play_arrow_24px"
                        android:text="@string/playback_speed" />

                    <TextView
                        android:id="@+id/fragment_nicovideo_menu_playback_speed_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <SeekBar
                        android:id="@+id/fragment_nicovideo_menu_playback_speed_seek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:max="7"
                        android:min="1"
                        android:progress="4" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10sp">


                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                        <Switch
                                android:id="@+id/fragment_nicovideo_menu_3ds_switch"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5sp"
                                android:text="@string/nicovideo_setting_hide_device_3ds" />

                        <Switch
                            android:id="@+id/fragment_nicovideo_menu_switch_switch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5sp"
                            android:text="@string/nicovideo_setting_hide_device_switch" />

                        <Switch
                                android:id="@+id/fragment_nicovideo_menu_hide_kantan_comment_switch"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5sp"
                                android:text="@string/nicovideo_setting_hide_kantan_comment" />

                        <Switch
                                android:id="@+id/fragment_nicovideo_menu_hide_comment_canvas_switch"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5sp"
                                android:text="@string/comment_hidden" />

                    </LinearLayout>

                    <Button
                            android:id="@+id/fragment_nicovideo_menu_add_mylist_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_mylist" />

                    <Button
                            android:id="@+id/fragment_nicovideo_menu_atodemiru_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_atodemiru" />

                    <Button
                            android:id="@+id/fragment_nicovideo_menu_quality_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/quality" />


                    <Button
                            android:id="@+id/fragment_nicovideo_menu_rotation_button"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/landscape_portrait" />

                    <Button
                            android:id="@+id/fragment_nicovideo_menu_copy_button"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/video_id_copy" />


                    <Button
                            android:id="@+id/fragment_nicovideo_menu_browser_launch_button"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/brower_launch" />


                    <Button
                            android:id="@+id/fragment_nicovideo_menu_ng_activity_button"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ng_list" />

                    <Button
                            android:id="@+id/fragment_nicovideo_menu_kotehan_activity_button"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kotehan_list" />

                    <Button
                            android:id="@+id/fragment_nicovideo_menu_skip_setting_button"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/skip_setting"
                            app:icon="@drawable/ic_redo_black_24dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10sp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_folder_open_black_24dp"
                            android:text="@string/cache" />

                    <Button
                            android:id="@+id/fragment_nicovideo_menu_get_cache_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/get_cache" />

                    <Button
                            android:id="@+id/fragment_nicovideo_menu_get_cache_eco_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/get_cache_eco" />

                    <Button
                            android:id="@+id/fragment_nicovideo_menu_re_get_cache_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/get_cache_re_get"
                            android:visibility="gone"
                            tools:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10sp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_share"
                            android:text="@string/share" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                        <Button
                                android:id="@+id/fragment_nicovideo_menu_share_media_attach_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2sp"
                                android:layout_weight="1"
                                android:text="@string/share_attach_image" />

                        <Button
                                android:id="@+id/fragment_nicovideo_menu_share_button"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2sp"
                                android:layout_weight="1"
                                android:text="@string/share" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10sp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_volume_up_24px"
                            android:text="@string/volume" />

                    <SeekBar
                            android:id="@+id/fragment_nicovideo_menu_volume_seek"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10sp"
                            android:max="10"
                            android:min="0"
                            android:progress="10" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>