<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nimado_liveid_bottom_fragment_liveid_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/liveid_or_communityid" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/bottom_fragment_nimado_liveid_comment_viewer_mode_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment_viewer_mode" />

    <Button
            android:id="@+id/bottom_fragment_nimado_liveid_comment_post_mode_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment_post_mode" />

    <Button
            android:id="@+id/bottom_fragment_nimado_liveid_comment_nicocas_mode_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nicocas_comment_post_mode"
            android:textAllCaps="false" />
</LinearLayout>